syntax = "proto3";

package exam.v1;

option go_package = "exam/v1;proto";

service MailTmplService {
  rpc CreateMailTmpl(CreateMailTmplRequest) returns (CreateMailTmplResponse);
  rpc UpdateMailTmpl(UpdateMailTmplRequest) returns (UpdateMailTmplResponse);
  rpc DeleteMailTmpl(DeleteMailTmplRequest) returns (DeleteMailTmplResponse);
  rpc GetMailTmpl(GetMailTmplRequest) returns (GetMailTmplResponse);
  rpc GetAllMailTmpl(GetAllMailTmplRequest) returns (GetAllMailTmplResponse);
}

message CreateMailTmplRequest {
  string subject = 1;
  string body = 2;
  string created_by = 3;
  string created_at = 4;
  string status = 5;
  string provider_email = 6;
}

message MailTmpl {
  string id = 1;
  string subject = 2;
  string body = 3;
  string created_by = 4;
  string created_at = 5;
  string status = 6;
  string provider_email = 7;
  string updated_at = 8;
}

message CreateMailTmplResponse {
  string message = 1;
  MailTmpl mail_tmpl = 2;
}

message UpdateMailTmplRequest {
  string id = 1;
  string subject = 2;
  string body = 3;
  string status = 4;
  string provider_email = 5;
}

message UpdateMailTmplResponse {
  string message = 1;
  MailTmpl mail_tmpl = 2;
}

message DeleteMailTmplRequest {
  string id = 1;
}

message DeleteMailTmplResponse {
  string message = 1;
}

message GetMailTmplRequest {
  string id = 1;
}

message GetMailTmplResponse {
  string message = 1;
  MailTmpl mail_tmpl = 2;
}

message GetAllMailTmplRequest {
  string page = 1;
  string limit = 2;
  string search = 3;
  string sort = 4;
  string order = 5;
  string status = 6;
  string created_by = 7;
  string created_at = 8;
  string updated_at = 9;
}

message GetAllMailTmplResponse {
  string message = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  repeated MailTmpl mail_tmpls = 5;
}